test/sematest/invalid/invalid_lvalue.java
class Foo {
    public void foo() {
        int a = 42;
        int b = 43;
        a + b = 85;
    }
}
